--- a/style.css
+++ b/style.css
@@ -67,7 +67,7 @@ div.conheca {
 
 main {
     background-color: whitesmoke;
-    width: 50%;
+    width: 900px;
     margin: auto;
     padding: 5px;
     border-radius: 5px;
